--- a/css/go-blog.css
+++ b/css/go-blog.css
@@ -1,17 +1,18 @@
 * {
     word-wrap: break-word;
 }
-
+pre code {
+    white-space: break-spaces;
+}
+footer {
+    display: none;
+}
 #blog .Article {
     padding: 0 !important;
 }
 
-footer {
-    display: none;
-}
 
 #blog pre {
     margin: 0 !important;
     padding: 0 !important;
-    white-space: break-spaces;
 }
