--- a/css/go-blog.css
+++ b/css/go-blog.css
@@ -3,8 +3,35 @@
     padding: 0 !important;
 }
 
-
 #blog pre {
     margin: 0 !important;
     padding: 0 !important;
+}
+
+
+/*jetbrains blog*/
+div.enlighter-default.enlighter-v-standard.enlighter-t-wpcustom.enlighter-hover.enlighter-overflow-scroll div div div {
+    white-space: unset !important;
+    word-break: break-word !important;
+    padding: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
+section.article-section div.content {
+    padding: 0 !important;
+}
+
+div.section.light-gray-bg{
+    display: none !important;
+}
+
+div.content__row{
+    display: none !important;
+}
+div.content__pagination{
+    display: none !important;
+}
+div.container.comments-container{
+    display: none !important;
 }
