--- a/css/blog-jetbrains.css
+++ b/css/blog-jetbrains.css
@@ -1,5 +1,6 @@
-
-#blog .Article {
+div.enlighter-default.enlighter-v-standard.enlighter-t-wpcustom.enlighter-hover.enlighter-overflow-scroll div div div {
+    white-space: unset !important;
+    word-break: break-word !important;
     margin: 0 !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
@@ -12,7 +13,7 @@
     padding-bottom: 0 !important;
 }
 
-#blog pre {
+section.article-section div.content {
     margin: 0 !important;
     margin-left: 0 !important;
     margin-right: 0 !important;
@@ -23,4 +24,18 @@
     padding-right: 0 !important;
     padding-top: 0 !important;
     padding-bottom: 0 !important;
+}
+
+div.section.light-gray-bg{
+    display: none !important;
+}
+
+div.content__row{
+    display: none !important;
+}
+div.content__pagination{
+    display: none !important;
+}
+div.container.comments-container{
+    display: none !important;
 }
