seperated sites related logic in a seperate file

--- a/css/medium.css
+++ b/css/medium.css
@@ -1,3 +1,10 @@
+section div div {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+}
+
 .ab {
     margin: 0 !important;
     margin-left: 0 !important;
